[package]
name = "thunk-cli"
version = "0.3.3"
edition = "2021"
authors = ["felixmaker"]
description = "Thunk the Rust program to support Windows XP, Vista and more!"
license = "Apache-2.0 OR MIT"
keywords = ["build-dependencies"]
readme = "README.md"
repository = "https://github.com/felixmaker/thunk"
documentation = "https://docs.rs/thunk-rs"

[[bin]]
path = "src/main.rs"
name = "thunk"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
