[package]
name = "thunk-rs"
version = "0.3.1"
edition = "2021"
authors = ["felixmaker"]
description = "Thunk the Rust program to support Windows XP, Vista and more!"
license = "Apache-2.0 OR MIT"
keywords = ["build-dependencies"]
readme = "README.md"
categories = ["development-tools::build-utils"]
repository = "https://github.com/felixmaker/thunk"
documentation = "https://docs.rs/thunk-rs"

[lib]
name = "thunk"
path = "src/lib.rs"

[dependencies]

[features]
default = ["windows_xp"]
windows_xp = []
windows_vista = []
vc_ltl_only = []
lib = []
subsystem_windows = []
