[package]
name = "thunk-rs"
version = "0.3.2"
edition = "2021"
authors = ["felixmaker"]
description = "Thunk the Rust program to support Windows XP, Vista and more!"
license = "Apache-2.0 OR MIT"
keywords = ["build-dependencies"]
readme = "README.md"
categories = ["development-tools::build-utils"]
repository = "https://github.com/felixmaker/thunk"
documentation = "https://docs.rs/thunk-rs"

[lib]
name = "thunk"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
reqwest = { version = "0.12.8", features = ["blocking"] }
sevenz-rust = "0.6.1"
zip-extract = { version = "0.2.1", features = ["deflate", "deflate-miniz", "lzma", "zstd"] }

[features]
default = ["xp"]
xp = []
vista = []
win7 = []
win8 = []
win10_10240 = []
win10_19041 = []
vc_ltl_only = []
lib = []
subsystem_windows = []
windows_xp = ["xp"]
windows_vista = ["vista"]
win10 = ["win10_10240"]
